--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,11 @@ spring.app.jwtSecret=mySecretKey123912738aopsgjnspkmndfsopkvajoirjg94gf2opfng2mo
 spring.app.jwtExpirationMs=3000000
 spring.ecom.app.jwtCookieName=anatomy
 
+spring.web.cors.allowed-methods=*
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+
+
 
 
 logging.level.org.springframework=DEBUG
@@ -23,4 +28,17 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.ecommerce.anatomy=DEBUG
 
+#Google OAut2 configuration
+spring.security.oauth2.client.registration.google.client-id=${googleClientId}
+spring.security.oauth2.client.registration..google.client-secret=${googleClientSecret}
+
+#Twilio Messaging Configuration
+twilio.accountSid=${twilioAccountSid}
+twilio.authToken=${twilioAuthToken}
+twilio.phoneNumber=${twilioPhoneNumber}
+# If you want to use alphanumeric sender ID like "MYSHOP", change this:
+# twilio.phoneNumber=MYSHOP
+
+
+frontend.url=http://localhost:3000
 
